--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "content-type": "^1.0.5",
     "cookie": "^0.6.0",
     "cookie-signature": "^1.0.6",
+    "csurf": "^1.11.0",
     "define-data-property": "^1.1.4",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
@@ -52,11 +53,16 @@
     "mime-types": "^2.1.35",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
+    "multer": "^1.4.5-lts.1",
     "negotiator": "^0.6.3",
+    "nocache": "^4.0.0",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "object-inspect": "^1.13.2",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "path-to-regexp": "^0.1.7",
     "proxy-addr": "^2.0.7",
@@ -78,9 +84,8 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "Adwaid",
   "license": "ISC"
